# SimShoot

./: .gitignore  README.md  TargetShooter.sln
Linux/: CMakeLists.txt  prerequisites.txt
TargetShooter/: Camera.cpp  Camera.h  Display.cpp  Display.h  Hit.cpp  Hit.h  Record.cpp  Record.h  TargetShooter.cpp  TargetShooter.vcxproj  TargetShooter.vcxproj.filters  game1.cpp  game1.h  settings.cpp  settings.h
TargetShooter/Linux/: screen.cpp  screen.h
TargetShooter/x64/Debug/: TargetShooter.exe.recipe  vc142.idb
TargetShooter/x64/Debug/TargetShooter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TargetShooter.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Windows/: CMakeLists.txt
build-Windows-Desktop_x86_windows_msvc2019_pe_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-Windows-Desktop_x86_windows_msvc2019_pe_64bit-Debug/.cmake/api/v1/reply/: cache-v2-7c22955435b35b22198e.json  cmakeFiles-v1-ec3940fa6c6f045b4897.json  codemodel-v2-4261e121709479a83e70.json  codemodel-v2-bed00776986369941d46.json  index-2021-01-12T18-38-04-0788.json  index-2021-03-20T20-08-22-0037.json  target-SimShoot-Debug-60cb59007c769a943537.json  target-SimShoot-Debug-dd5a1d9b5bbfbf3f981b.json
x64/Debug/: TargetShooter.ilk
